2011-11-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: typofix in comments
	* tests/remake-am-pr10111.test (Makefile.am): Fix typo in comments.
	* THANKS: Update.
	Reported by Krzysztof Żelechowski.

2011-11-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: undistributed '.am' and '.m4' files are diagnosed
	The stub rules emitted to work around the "deleted header problem"
	for `.m4' files (included by autoconf in e.g., configure.ac) and
	for `.am' files (included by automake in e.g., Makefile.am) should
	not prevent "make" from correctly complaining when such a required
	file is missing from a distribution tarball.
	* tests/dist-missing-am.test: New test.
	* tests/dist-missing-m4.test: Likewise.
	* tests/dist-missing-included-m4.test: Likewise.
	* tests/Makefile.am (TESTS): Add them.
	Suggestion by Ralf Wildenhues.

2011-11-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: required but missing '.am' and '.m4' files are diagnosed
	The stub rules emitted to work around the "deleted header problem"
	for `.m4' files (included by autoconf in e.g., configure.ac) and
	for `.am' files (included by automake in e.g., Makefile.am) should
	not prevent the remake rules from correctly erroring out when a
	still-required file is missing.
	* tests/deleted-am.test: New test.
	* tests/deleted-m4.test: Likewise.
	* tests/Makefile.am (TESTS): Add them.

2011-11-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: expose automake bug#10111 in the testsuite
	* tests/remake-am-pr10111.test: New test, xfailing.
	* tests/remake-m4-pr10111.test: Likewise.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Add them.

2011-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	texinfo: work around Solaris 10 xpg4 shell bug in install rules
	* lib/am/texinfos.am (install-html-am): Use an extra variable
	indirection to work around a bug in Solaris 10 /usr/xpg4/bin/sh.
	Bug revealed by a failure of `txinfo21.test'.  See also: