@@ -1,3 +1,12 @@
+2011-11-28  Peter Rosin  <peda@lysator.liu.se>
+
+	tests: fix 'distcheck-override-infodir.test' on Cygwin
+	* tests/distcheck-override-infodir.test (Makefile.am): Do not add
+	any `/' between $(DESTDIR) and the following paths.  Otherwise,
+	when $(DESTDIR) is empty, the recipes will try to access files
+	with a leading double slash, which have an implementation-defined
+	interpretation (e.g., for Cygwin, they mean UNC paths).
+
 2011-11-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	cosmetics: typofix in comments
